<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_fragment_background"
    android:paddingLeft="@dimen/margin_horizontal"
    android:paddingRight="@dimen/margin_horizontal" >

    <TextView
        android:id="@id/tv_add_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:layout_marginTop="@dimen/margin_vertical"
        android:drawableLeft="@drawable/tip_drawable"
        android:drawablePadding="5.0dip"
        android:layout_marginLeft="5.0dip"
        android:text="@string/sdk_add_new_tip"
        android:textColor="@color/color_common_text"
        android:textSize="@dimen/common_generic_size" />

    <com.uucun.android.passport.layout.InputCommonLayout
        android:id="@id/common_input_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_layout_background1"
        android:paddingLeft="@dimen/sdk_text_margin"
        android:paddingRight="@dimen/sdk_text_margin"
        android:layout_below="@id/tv_add_tip" >

        <EditText
            android:id="@id/sdk_et_input"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_text_layout_height"
            android:layout_toLeftOf="@id/sdk_btn_clear"
            android:drawableLeft="@drawable/sdk_user"
            android:drawablePadding="@dimen/sdk_input_drawable_margin"
            android:ems="10"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:singleLine="true"
            android:textColorHint="@color/color_secondary_text"
            android:textColor="@color/color_input_text"
            android:textSize="@dimen/input_generic_size" 
            android:background="@null">
        </EditText>

        <ImageView
            android:id="@id/sdk_btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/content_description"
            android:visibility="invisible"
            android:src="@drawable/sdk_deleter_selector" />
    </com.uucun.android.passport.layout.InputCommonLayout>
    
    <ImageView
        android:id="@id/divider_horizon" 
        android:layout_below="@id/common_input_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/divider_horizon"
        android:scaleType="fitXY"
        android:contentDescription="@string/content_description"/>

    <com.uucun.android.passport.layout.InputPassportLayout
        android:id="@id/passport_input_layout"
        android:layout_width="fill_parent"
        android:background="@drawable/input_layout_background3"
        android:layout_height="@dimen/edit_text_layout_height"
        android:layout_below="@id/divider_horizon" >

        <EditText
            android:id="@id/sdk_et_pass_input"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/sdk_btn_pass_clear"
            android:drawableLeft="@drawable/sdk_code"
            android:ems="10"
            android:drawablePadding="@dimen/sdk_input_drawable_margin"
            android:hint="@string/hint_password"
            android:layout_marginLeft="@dimen/sdk_text_margin"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/color_secondary_text"
            android:textColor="@color/color_input_text"
            android:textSize="@dimen/input_generic_size"
            android:maxLength="12"
            android:background="@null"/>

        <ImageView
            android:id="@id/sdk_btn_pass_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/sdk_btn_pass_show"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_small"
            android:contentDescription="@string/content_description"
            android:visibility="invisible"
            android:src="@drawable/sdk_deleter_selector" />
        
        <ToggleButton android:id="@id/sdk_btn_pass_show"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edit_inner_btn_height"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/sdk_text_margin"
            android:background="@drawable/sdk_btn_verify_selector"
            android:textSize="@dimen/toggle_text_size"
            android:textOn="@string/sdk_password_show"
            android:textOff="@string/sdk_password_hide"
            android:textColor="@color/color_text_show"
            android:checked="true"/>
    </com.uucun.android.passport.layout.InputPassportLayout>

    <TextView
        android:id="@id/tv_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:layout_below="@id/passport_input_layout"
        android:linksClickable="true"
        android:textColor="@color/color_btn_text_blue"
        android:textSize="@dimen/common_generic_size"
        android:text="@string/sdk_forget_pass_tip" />

    <Button
        android:id="@id/sdk_btn_login"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/sdk_button_height"
        android:layout_below="@id/tv_forget_pass"
        android:background="@drawable/sdk_btn_blue_selector"
        android:text="@string/sdk_login_add"
        android:textColor="@color/color_button_text"
        android:textSize="@dimen/button_generic_size" />

</RelativeLayout>